--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 Hello world!
+
+#Redis
+
+##Redis 全称REmote DIctionary Server,是一个开源的使用ANSI C预言编写的、遵守BSD协议、支持网络、
+可基于内存亦可持久化的日志型、Key-Value数据库，并提供多种语言的API。
+
+##它通常被称为数据结构服务器，因为值可以是字符串（string）、哈希(map),列表（list）,集合（sets）
+和有序集合（sorted sets）等类型。
+
+
+##Redis支持数据备份，即master-slave模式的数据备份。
